make convert async, fix some exception logging, fix rare biome client crash